@@ -12,9 +12,11 @@ AUX gitlab.conf 27 SHA256 cd9be088bbb67a5400407fc6f63c061eb224f16748b7d0812ff2c1
 DIST gitlab-ce-8.10.6.tar.gz 21039451 SHA256 8c7313ce49dfec816ba74187f920960229f3740d2a433582d48d8f03ac0ffd71 SHA512 aed0a8760eec42ebe059b271134ccad644092a2ce0a7f51a1f338428edbe045d636bf115450fd55ecce500445a94bccece6a7a4ec32f6cc0fbde8f5c3d879dcd WHIRLPOOL 69b3c694d27020edeeacd8da6f2826cbf7c704cd4b11387ac3baf07ec07b37b8374fc73256d39b132f51f49e8038dce16db8eb266dd807acd126a0de1584e244
 DIST gitlab-ce-8.11.0.tar.gz 25292875 SHA256 581f228ea5caaa872d180b5864929070b18d16f565bf265a237f85f57fbe04c7 SHA512 41f9a192118ef7a044ed587e45ef6aa7fdd90bc002dd893a201cfcc2b367c6eb1137ea7f4969ac4caec284e68a92b1b1af46218764ea1f9b0ff18257b4dec925 WHIRLPOOL 4b79dab88def24af0c3f71222e14cfc7314132185c14993c8085b1d00ea61250496ca9e2c97b9e8d0d3303440184f500caf7ea16524ab2c1330c83d9766ecd40
 DIST gitlab-ce-8.11.0_rc1.tar.gz 21523791 SHA256 1c3217bb1253359335025e6b5222cd1a8a274d108c02b896553af6b79ad40f9c SHA512 7d82a98f9505c6e9afc275ae6ba52b9a03752baca22f2890ba4ac9507ec331962223257602652657fcabfccef891b50dcb3dbbf30dc57080246f941f33d19dc3 WHIRLPOOL bbde9b27f3cf6b7dab1158927e22ded2f12e2d2568334ef3e140a879ff668d55bb09deed1617e2accbaf4909a68b1983ce56798019f5a0e2ce277c4500d24e76
+DIST gitlab-ce-8.11.2.tar.gz 25627225 SHA256 a807f06cb80ac3becae2f89702988203e2843cdd929f5e21ba073babe6987731 SHA512 7bdbf045c36a65528b960e466ab8b8bcc930aacb1201ce332a0a9329808960d0fede27c6e155a26b0eb64a1ec0c2c75901cdca6051df7f0f31d421e970004f16 WHIRLPOOL 4cad8c23cfbdb3620a758b6e7478bf044a23d9aeb748aae3ff7145e25e2b4d7bfc016d8ad43b029b563e99e5aa24b35dcc8178775f7e3c8b0586c65c321de166
 EBUILD gitlab-ce-8.10.6.ebuild 11710 SHA256 1659a2e43491488fa6fbbee1699cc4138e8938f694e73310e5faf45fbd9f2578 SHA512 70304f8fe862988d4092dd37c5a66fdfec56c9cb2d62a78f2cdf365a0c629606c6fb9081dbdc7e68530d43894d1cb645d168db8f3f0c8a9999873afd9032ec52 WHIRLPOOL dbf26294a9d6eb4258a67c64844370f1423fa59210b306bc66ea53a902cbc564b1cd084b765759e93d7970df30417e6482dfbbf271dda8d387ef006837123ac3
 EBUILD gitlab-ce-8.11.0.ebuild 11703 SHA256 f95aa4a60c85da0155df6b989e343296eba23a6c2f12055c5f94bee53f5d9bc0 SHA512 6d1c7c3e3139d456a7b22431b326401a9b56e435000a02a572bfdbb52c5495e098b0406ab9b8051a2a901878e3a3a2c4332af9a0bf50ff1a36051f9436c1ddbe WHIRLPOOL bd92de9d5fda4a4b1802e814a55ea1e1a9848a9e085b9ad88ba108771dc68953156c8cecde64ef2250eba8f2b9568f73969460aa61c4901957d9b7771558ed9c
 EBUILD gitlab-ce-8.11.0_rc1.ebuild 11654 SHA256 a73c20f2671fa997bab4b715c7cd2d40f74e1900a96d5805c8a16139fd367736 SHA512 a8af8ffb14f2f190885597f1afa9cd3d2460c47933d45c49f60cffc5f57631b63b04b2a162ed9d520a64146f6d8701699640b9718475d6adbdf61399efd00cfa WHIRLPOOL 7eb709c573f046f519410d7ccfd1e5f2f662e253355243bdc1bf35cc9021f554fd4b0da07beb9826247a70a345d411ef4e6e2f12b3098227da4847d356268495
+EBUILD gitlab-ce-8.11.2.ebuild 11712 SHA256 02dd8184aa55060d9b36fefef46d2506f2516034fdff03837205ca152706f13f SHA512 cb14a84ba0e34f795a06f8947e222fb2fa1ee9a79d3d81bc527498e7ccbbb06ec5e26c56d39e0da30148e918397daaaca4337e732e8791994ed7aaf731cae185 WHIRLPOOL 63309d30e1e41db231f074fadef91fda5fc6d7dc0fa85339b64f4a6522d598c2b67b593f769e4ce70d2343607f6f42eee60614bf0556e2a4848a142c8d326fff
 EBUILD gitlab-ce-9999.ebuild 11644 SHA256 049dcd6ae1eedc7816fc0e1052b868ee3099e902316c751f395d5f1be5139d2d SHA512 f0c664af009419c6ef2f6bca661c5f9656f258ecbcf980d9b02a1920bc1049ac55409b2ff6c451b0eb7129f943b4263efba81b254e42d815f7089af057b01fc5 WHIRLPOOL 7e66b8d3e512709d8ec6ce59d9d87ef3664a12901fc5de478e204e3e7bebd11b3b26c9c996679eeecae10667e9a885e815dcadf49a41baeb0094148cec779f26
-MISC ChangeLog 5353 SHA256 ec609588575a93774d5ce3f75653fbc90a29db598eff012de58d18dc3d1c38f9 SHA512 0a91171c659a410e979ce854170fdef2b74c6c4e28a6eb7e1df04303e2741ded2a21c0b272570a0010039f6288e49c690b119ac5b72efb9fd51e23cd98d4cfbe WHIRLPOOL 6dc13ae5519184c02136742244661f3061edd8721b5f5f9fd9f1dfbf8750d964624559a153b367bdd5a01a984ff4d08f859d0820682b38d9c68b289220574166
+MISC ChangeLog 5521 SHA256 043264749bc30babcc2deef35d26188d3710a951120395502db4e07983915209 SHA512 8d1128daf069dc5ad3914f894568e043a8e66f3535d7d5200462926872685a2017da138bb11040c61c72699d3f0f0460f69aa219c71033c854e4bbf9308ac552 WHIRLPOOL 28fa2bbc7b2a79485909b5bd0649e71bcda72d0bc6aff0e1dcc437af289b3a2311820e5de5236ecd210bf4029c0ee4c150954ae92999684e706b38401e22e0c0
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
